k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sketch-compiler
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: sketch-compiler
